fix header spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
 
 .header {
 	display: grid;
+	margin-top: 0.5rem;
 	grid-template-columns: 11.5rem auto;
 	grid-template-rows: auto auto auto;
 	grid-template-areas: "headshot fullname" "headshot slug" "headshot email";
